--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -14,75 +14,59 @@
           <!-- gallery-wrap .end// -->
         </aside>
         <main class="col-md-6 border-left">
-          <article class="content-body">
-            <h2 class="title">{{ single_product.product_name }}</h2>
+          <form action="{% url 'add_cart' single_product.id %}" method="POST">
+            {% csrf_token %}
+            <article class="content-body">
+              <h2 class="title">{{ single_product.product_name }}</h2>
 
-            <div class="mb-3">
-              <var class="price h4">${{ single_product.price }}</var>
-            </div>
-
-            <p>{{ single_product.description }}</p>
-
-            <hr />
-            <div class="row">
-              <div class="item-option-select">
-                <h6>Choose Color</h6>
-                <div
-                  class="btn-group btn-group-sm btn-group-toggle"
-                  data-toggle="buttons"
-                >
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Silver
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Gray
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked" /> Gold
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> Black
-                  </label>
+              <div class="mb-3">
+                <var class="price h4">${{ single_product.price }}</var>
+              </div>
+              <p>{{ single_product.description }}</p>
+              <hr />
+              <div class="row">
+                <div class="item-option-select">
+                  <select name="color" class="form-control" required>
+                    <option value="" selected>Select a Color</option>
+                    {% for variation in single_product.variation_set.colors %}
+                    {% if variation.is_active %}
+                    <option value="{{ variation.variation_value }}">{{ variation.variation_value | capfirst }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
                 </div>
               </div>
-            </div>
-            <!-- row.// -->
-            <div class="row">
-              <div class="item-option-select">
-                <h6>Select Size</h6>
-                <div
-                  class="btn-group btn-group-sm btn-group-toggle"
-                  data-toggle="buttons"
-                >
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> S
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked /> M
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> L
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" /> XL
-                  </label>
+              <!-- row.// -->
+              <div class="row">
+                <div class="item-option-select">
+                  <select name="size" class="form-control" required>
+                    <option value="" selected>Select a Size</option>
+                    {% for variation in single_product.variation_set.sizes %}
+                    <option value="{{ variation.variation_value }}">{{ variation.variation_value | capfirst }}</option>
+                    {% endfor %}
+                  </select>
                 </div>
               </div>
-            </div>
-            <!-- row.// -->
-            <hr />
+              <!-- row.// -->
+              <hr />
 
-            {% if single_product.get_is_available %}
-            <a href="#" class="btn btn-primary">
-              <span class="text">Add to cart</span>
-              <i class="fas fa-shopping-cart"></i>
-            </a>
-            {% else %}
-            <span class="text text-uppercase text-danger font-weight-bold"
-              >Out of Stock</span
-            >
-            {% endif %}
-          </article>
+              {% if single_product.get_is_available %} 
+              {% if not is_added %}
+              <button type="submit" class="btn btn-primary">
+                <span class="text">Add to cart</span>
+                <i class="fas fa-shopping-cart"></i>
+              </button>
+              {% else %}
+              <a href="{% url 'cart' %}" class="btn btn-outline-primary">
+                <span class="text">Viewcart</span>
+              </a>
+              {% endif %} {% else %}
+              <span class="text text-uppercase text-danger font-weight-bold"
+                >Out of Stock</span
+              >
+              {% endif %}
+            </article>
+          </form>
           <!-- product-info-aside .// -->
         </main>
         <!-- col.// -->
