--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -166,7 +166,7 @@
                   </div>
                   <!-- price-wrap.// -->
                 </div>
-                <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                <a href="{{ product.get_url }}" class="btn btn-block btn-primary"> View Details</a>
               </figcaption>
             </figure>
           </div>
@@ -174,18 +174,21 @@
           <!-- col.// -->
         </div>
         <!-- row end.// -->
-
         <nav class="mt-4" aria-label="Page navigation sample">
           <ul class="pagination">
+            {% if products.has_previous%}
             <li class="page-item disabled">
-              <a class="page-link" href="#">Previous</a>
+              <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}&keyword={{ request.GET.keyword }}">Previous</a></li>
             </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
+            {% endif %}
+            {% for current_page in pages_range %}
+            <li class="page-item {% if page_number == current_page %}active{% endif %}">
+              <a class="page-link" href="?page={{ forloop.counter }}&keyword={{ request.GET.keyword }}">{{ current_page }}</a>
             </li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            {% endfor %}
+            {% if products.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}&keyword={{ request.GET.keyword }}">Next</a></li>
+            {% endif %}
           </ul>
         </nav>
       </main>
