--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
       src="{% static 'js/jquery-2.0.0.min.js' %}"
       type="text/javascript"
     ></script>
-
+    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
     <!-- Bootstrap4 files-->
     <script
       src="{% static 'js/bootstrap.bundle.min.js' %}"
@@ -66,10 +66,10 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    {% include 'includes/navbar.html' %}
-    {% block content %}
+    {% include 'includes/navbar.html' %} {% block content %}
     <!-- content -->
     {% endblock %}
     <!-- FOOTER -->
     {% include 'includes/footer.html' %}
- 
+  </body>
+</html>
