--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -61,9 +61,11 @@
               <i class="fa fa-bars"></i> All category
             </button>
             <div class="dropdown-menu">
-               <a class="dropdown-item" href="{% url 'store' %}">All Products</a>
+              <a class="dropdown-item" href="{% url 'store' %}">All Products</a>
               {% for category in links %}
-              <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+              <a class="dropdown-item" href="{{ category.get_url }}"
+                >{{ category.category_name }}</a
+              >
               {% endfor %}
             </div>
           </div>
@@ -94,18 +96,26 @@
         <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
           <div class="d-flex justify-content-end mb-3 mb-lg-0">
             <div class="widget-header">
-              <small class="title text-muted">Welcome guest!</small>
+              {% if user.is_authenticated %}
+              <small class="title text-muted">{{ user.username }}</small>
+              {% endif %}
               <div>
-                <a href="./signin.html">Sign in</a>
+                {% if user.is_authenticated %}
+                <a href={% url 'logout' %}>Log Out</a> 
+                {% else %}
+                <a href={% url 'login' %}>Sign in</a> 
                 <span class="dark-transp"> | </span>
-                <a href="./register.html"> Register</a>
+                <a href="{% url 'register' %}"> Register</a>
+                {% endif %}
               </div>
             </div>
             <a href="{% url 'cart' %}" class="widget-header pl-3 ml-3">
               <div class="icon icon-sm rounded-circle border">
                 <i class="fa fa-shopping-cart"></i>
               </div>
-              <span class="badge badge-pill badge-danger notify">{{ number_items }}</span>
+              <span class="badge badge-pill badge-danger notify"
+                >{{ number_items }}</span
+              >
             </a>
           </div>
           <!-- widgets-wrap.// -->
