--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -1,17 +1,11 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <section class="section-conten padding-y" style="min-height: 84vh">
   <!-- ============================ COMPONENT LOGIN   ================================= -->
-  {% if is_activate == False %}
-  <div class="alert alert-info container text-center" role="alert">
-    ¡Por favor, confirma tu cuenta! Hemos enviado un correo electrónico a {{ email }}
-  </div>
-  {% else %}
-  <div class="card mx-auto" style="max-width: 380px; margin-top: 100px">
+  <div class="card mx-auto" style="max-width: 450px; margin-top: 100px">
     <div class="card-body">
       {% include 'includes/messages.html' %}
-      
-      <h4 class="card-title mb-4">Sign in</h4>
-      <form action="{% url 'login' %}" method="POST">
+      <h4 class="card-title mb-4">Restore Password</h4>
+      <form action="{% url 'forgot_password' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
           <input
@@ -21,30 +15,19 @@
             name="email"
           />
         </div>
-        <!-- form-group// -->
         <div class="form-group">
-          <input
-            type="password"
-            name="password"
-            class="form-control"
-            placeholder="Password"
-          />
-        </div>
-        <!-- form-group// -->
-
-        <div class="form-group">
-          <a href="{% url "forgot_password" %}" class="float-right">Forgot password?</a>
-        </div>
-        <!-- form-group form-check .// -->
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <p class="text-right mt-4">
+            Got password? <a href="{% url 'login' %}">Login</a>
+          </p>
+          <button type="submit" class="btn btn-primary btn-block">
+            Submit
+          </button>
         </div>
         <!-- form-group// -->
       </form>
     </div>
     <!-- card-body.// -->
   </div>
-  {% endif %}
   <!-- card .// -->
 
   <p class="text-center mt-4">
