--- a/templates/includes/messages.html
+++ b/templates/includes/messages.html
@@ -1,11 +1,22 @@
-{% if messages %} 
-{% for message in messages %}
-<div id='message' class='contianer'>
-  <div {% if message.tags %} id="message" class="alert alert-{{ message.tags }}" {% endif %}>
-    <button type='button' class='close' data-dismiss='alert'><span aria-hidden="true">&times</span></button>
+{% if messages %} {% for message in messages %}
+<div id="message" class="contianer">
+  <div
+    {%
+    if
+    message.tags
+    %}
+    id="message"
+    class="alert alert-{{ message.tags }} 
+  {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}alert-danger{% endif %}"
+    {%
+    endif
+    %}
+  >
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times</span>
+    </button>
     {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
     {{ message }}
   </div>
 </div>
-{% endfor %} 
-{% endif %}
+{% endfor %} {% endif %}
